# trackedfitness-django-nextjs

./: .gitignore
backend/: .dockerignore  Dockerfile  manage.py  pyproject.toml  requirements.txt
backend/.github/workflows/: django.yml
backend/apps/brands/: admin.py  factories.py  managers.py  models.py  serializers.py  views.py
backend/apps/categories/: admin.py  factories.py  models.py  serializers.py  views.py
backend/apps/diet/: admin.py  apps.py  factories.py  managers.py  models.py  permissions.py  serializers.py  views.py
backend/apps/diet_settings/: admin.py  apps.py  models.py  serializers.py  views.py
backend/apps/diet_targets/: admin.py  apps.py  factories.py  managers.py  models.py  permissions.py  serializers.py  views.py
backend/apps/exercises/: admin.py  factories.py  models.py  serializers.py  views.py
backend/apps/followers/: admin.py  managers.py  models.py  serializers.py  views.py
backend/apps/food/: admin.py  factories.py  filters.py  managers.py  models.py  serializers.py  views.py
backend/apps/meals/: admin.py  apps.py  factories.py  managers.py  models.py  serializers.py  views.py
backend/apps/muscle_groups/: admin.py  apps.py  models.py  serializers.py  views.py
backend/apps/profiles/: admin.py  filters.py  managers.py  models.py  permissions.py  serializers.py  views.py
backend/apps/progress/: admin.py  factories.py  (+4 more)
backend/config/: asgi.py  authentication.py  converters.py  permissions.py  runner.py  urls.py  wsgi.py
backend/gunicorn/: gunicorn.service
backend/nginx/: nginx.conf  nginx_http.conf  nginx_ssl.conf
(+562 files in other folders)
